# pwvault

./: .gitignore  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: .metadata  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/bridge/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  store.dart
app/lib/core/: avatar.dart  providers.dart  router.dart  shortcuts.dart  strength_bar.dart  theme.dart
app/lib/services/: autolock_service.dart  clipboard_service.dart  (+4 more)
app/rust_builder/: pubspec.yaml
app/test/: app_smoke_test.dart  autolock_service_test.dart  bridge_ping_test.dart  bridge_vault_test.dart  clipboard_service_test.dart  entry_detail_panel_test.dart  entry_edit_form_test.dart  entry_list_panel_test.dart  main_shell_test.dart  mock_entry_store_test.dart  password_field_row_test.dart  password_gen_service_test.dart  search_index_test.dart  settings_page_test.dart  settings_persist_test.dart  shortcuts_test.dart  sidebar_filter_test.dart  unlock_page_test.dart  url_normalizer_test.dart  vault_picker_test.dart  vault_service_test.dart
app/windows/: CMakeLists.txt
core_crypto/: Cargo.toml
core_crypto/migrations/: 001_init.sql
core_crypto/src/: api.rs  b64.rs  cipher.rs  frb_generated.rs  kdf.rs  lib.rs  password_gen.rs  persist.rs  secret.rs  session.rs  store.rs  vault.rs  vault_format.rs
core_crypto/tests/: cli_smoke.rs
docs/: password-manager-pdr.html
(+29 files in other folders)
