[package]
name = "core_crypto"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[lints.rust]
# flutter_rust_bridge 宏内部使用的 cfg，声明以消除 unexpected_cfgs 警告
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(frb_expand)"] }

[dependencies]
flutter_rust_bridge = "=2.12.0"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
blake3 = "1"
thiserror = "2"
getrandom = "0.3"

[dev-dependencies]
hex = "0.4"
